@@ -372,7 +372,7 @@ Description: Point Cloud Library - recognition library
  This package contains the libraries needed to run applications 
  depending on PCL recognition.
 
-Package: libpcl-tools
+Package: pcl-tools
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
