@@ -1,3 +1,0 @@
-#! /usr/bin/dh-exec
-usr/lib/${DEB_HOST_MULTIARCH}/libpcl_cc_* usr/lib/cloud_composer_plugins
-usr/bin/pcl_*
